# isla

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  MODULE.bazel  README.md
.github/actions/determine-affected-bazel-targets/: action.yml
.github/actions/reset-pr-comment/: action.yml
.github/actions/verify-linux-deps/: action.yml
.github/scripts/: check-final-newline.ps1  ci-helpers.ps1  get-bazel-remote-flags.ps1  get-bazel-remote-flags.sh  post-pr-report.js  run-clang-format.ps1  run-clang-tidy.ps1
.github/workflows/: build-runner-image.yml  ci.yml  format.yml  lint.yml
client/src/: BUILD  ai_gateway_client_session.cpp  ai_gateway_client_session.hpp  ai_gateway_client_session_test.cpp  ai_gateway_smoke_client_main.cpp  animated_mesh_skinning.cpp  animated_mesh_skinning.hpp  animated_mesh_skinning_test.cpp  client_app.cpp  client_app.hpp  client_app_animation_test.cpp  client_app_animation_world.cpp  client_app_animation_world.hpp  client_app_gateway_test.cpp  client_app_geometry_utils.cpp  client_app_geometry_utils.hpp  client_app_internal_types.cpp  client_app_internal_types.hpp  client_app_physics_proxies.cpp  client_app_physics_proxies.hpp  client_app_startup_loader.cpp  client_app_startup_loader.hpp  client_app_test_hooks.hpp  client_app_texture_remap.cpp  client_app_texture_remap.hpp  client_sdl_runtime.cpp  client_sdl_runtime.hpp  main.cpp  model_intake.cpp  model_intake.hpp  model_intake_test.cpp  win32_layered_overlay.cpp  win32_layered_overlay.hpp  win32_layered_overlay_test.cpp
docs/: COORDINATE_SYSTEMS.md
docs/ai/: ai-gateway-evals-phased-plan.md  ai-gateway-phased-plan.md  ai-gateway-protocol-first-streaming-phased-plan.md  ai-gateway-telemetry-phased-plan.md  ai_gateway_v1_design.md  local-llm-setup.md
docs/memory/: memory-planning.md  supabase-schema.md
docs/pending/: ai-gateway-phased-plan.md  pmx-native-runtime-phased-plan.md  pmx-to-gltf-animation-physics-phased-plan.md
docs/pmx/: pmx_to_gltf_conversion_contract.md
docs/pmx/examples/: sample.motion.json  sample.physics.json  sample.texturemap.json
docs/pmx/schemas/: pmx_motion_metadata.schema.json  pmx_physics_metadata.schema.json  pmx_texture_remap.schema.json
engine/src/: BUILD  engine_bootstrap.cpp
engine/src/math/: .clang-tidy  BUILD  mat4.cpp  quat.cpp  vector_math.cpp
engine/src/render/: BUILD  animated_gltf.cpp  animated_gltf_test.cpp  animation_playback_controller.cpp  animation_playback_controller_test.cpp  bgfx_mesh_manager.cpp  bgfx_mesh_manager_test.cpp  bgfx_shader_manager.cpp  bgfx_texture_manager.cpp  mesh_asset_loader.cpp  mesh_asset_loader_test.cpp  model_renderer.cpp  model_renderer_debug_overlay_test.cpp  model_renderer_skinning_utils.cpp  model_renderer_skinning_utils_test.cpp  model_renderer_test_hooks.hpp  overlay_transparency_contract_test.cpp  pmx_native_runtime.cpp  pmx_native_runtime_test.cpp  pmx_physics_sidecar.cpp  pmx_physics_sidecar_test.cpp  pmx_saba_bridge.cpp  pmx_texture_remap_sidecar.cpp  pmx_texture_remap_sidecar_test.cpp  render_world.cpp  render_world_test.cpp  shader_binary_runtime_test.cpp  shader_contract_test.cpp  shader_path_resolver.cpp  shader_path_resolver_test.cpp  texture_loader_limits_test.cpp  windows_composition_contract_test.cpp
server/memory/sql/: supabase_schema.sql
server/memory/src/: BUILD  conversation.cpp  conversation_test.cpp  llm_json_utils.cpp  llm_json_utils_test.cpp  memory_orchestrator.cpp  memory_orchestrator_test.cpp  memory_store.cpp  memory_store_mock.hpp  memory_store_test.cpp  memory_timestamp_utils.cpp  memory_types_test.cpp  mid_term_compactor.cpp  mid_term_compactor_mock.hpp  mid_term_compactor_test.cpp  mid_term_flush_decider.cpp  mid_term_flush_decider_mock.hpp  mid_term_flush_decider_test.cpp  mid_term_memory.cpp  mid_term_memory_test.cpp  prompt_loader.cpp  prompt_loader_test.cpp  supabase_memory_store.cpp  supabase_memory_store_test.cpp  system_prompt.cpp  system_prompt_test.cpp  working_memory.cpp  working_memory_test.cpp  working_memory_utils.cpp
server/src/: BUILD  ai_gateway_executor.cpp  ai_gateway_executor_test.cpp  ai_gateway_log_test_utils.hpp  ai_gateway_logging_telemetry_sink.cpp  ai_gateway_logging_telemetry_sink_test.cpp  ai_gateway_logging_utils.cpp  ai_gateway_logging_utils_test.cpp  ai_gateway_planner.cpp  ai_gateway_planner_test.cpp  ai_gateway_server.cpp  ai_gateway_server.hpp  ai_gateway_server_integration_test.cpp  ai_gateway_server_main.cpp  ai_gateway_session_handler.cpp  ai_gateway_session_handler.hpp  ai_gateway_session_handler_test.cpp  ai_gateway_startup_config.cpp  ai_gateway_startup_config.hpp  ai_gateway_startup_config_test.cpp  ai_gateway_step_registry.cpp  ai_gateway_step_registry_test.cpp  ai_gateway_string_utils.cpp  ai_gateway_string_utils.hpp  ai_gateway_stub_responder.cpp  ai_gateway_stub_responder.hpp  ai_gateway_stub_responder_concurrency_test.cpp  ai_gateway_stub_responder_mid_term_memory_test.cpp  ai_gateway_stub_responder_test.cpp  ai_gateway_stub_responder_test_support.hpp  ai_gateway_stub_responder_utils.cpp  ai_gateway_stub_responder_utils.hpp  ai_gateway_telemetry_test.cpp  ai_gateway_telemetry_test_utils.hpp  ai_gateway_test_mocks.hpp  ai_gateway_websocket_session.cpp  ai_gateway_websocket_session.hpp  ai_gateway_websocket_session_test.cpp  embedding_client_mock.hpp  gemini_api_embedding_client.cpp  (+24 more)
server/src/evals/: benchmark_adapter_utils.cpp  benchmark_adapter_utils_test.cpp  benchmark_cli_utils.cpp  benchmark_cli_utils.hpp  benchmark_cli_utils_test.cpp  eval_failure_utils.cpp  eval_json.cpp  (+16 more)
shared/src/: BUILD  ai_gateway_protocol.cpp  ai_gateway_protocol_test.cpp  ai_gateway_session.cpp  ai_gateway_session_test.cpp  build_info.cpp  test_runfiles.cpp  test_runfiles.hpp
tools/: BUILD  ai_gateway_smoke_test.py
tools/llvm_mingw/: BUILD.bazel  cc_toolchain_config.bzl
tools/pmx/: BUILD  README.md  validate_converted_gltf.py  validate_converted_gltf_test.py  validate_motion_clips.py  validate_motion_clips_smoke_test.py  validate_motion_clips_test.py
(+136 files in other folders)
