module(
    name = "isla",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "rules_python", version = "1.8.0")
bazel_dep(name = "boost.beast", version = "1.89.0.bcr.2")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

git_override(
    module_name = "rules_foreign_cc",
    commit = "16566f37f1220b996efc265ab848a2d3f52a488c",
    remote = "https://github.com/bazel-contrib/rules_foreign_cc.git",
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains("//tools/llvm_mingw:toolchain_x86_64_windows")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

http_archive(
    name = "sdl3_source",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "082cbf5f429e0d80820f68dc2b507a94d4cc1b4e70817b119bbb8ec6a69584b8",
    strip_prefix = "SDL3-3.4.0",
    urls = [
        "https://github.com/libsdl-org/SDL/releases/download/release-3.4.0/SDL3-3.4.0.tar.gz",
    ],
)

git_repository(
    name = "bx_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "bx",
    srcs = glob(
        ["src/*.cpp"],
        exclude = [
            "src/amalgamated.cpp",
            "src/crtnone.cpp",
        ],
    ),
    hdrs = glob([
        "include/**/*.h",
        "include/**/*.inl",
        "3rdparty/**/*.h",
        "scripts/**/*.natvis",
    ]),
    includes = [
        "include",
        "3rdparty",
    ],
    defines = [
        "BX_CONFIG_DEBUG=0",
        "BX_CONFIG_CRT_DIRECTORY_READER=0",
    ],
    visibility = ["//visibility:public"],
)
""",
    commit = "c723ec4054112b1ae7e9452c587fc743b3560b7a",
    remote = "https://github.com/bkaradzic/bx.git",
)

git_repository(
    name = "bimg_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "bimg",
    srcs = [
        "src/image.cpp",
        "src/image_gnf.cpp",
    ] + glob(["3rdparty/astc-encoder/source/**/*.cpp"]),
    hdrs = glob([
        "include/**/*.h",
        "src/*.h",
        "3rdparty/astc-encoder/include/**/*.h",
        "3rdparty/astc-encoder/source/**/*.h",
    ]),
    includes = [
        "include",
        "3rdparty/astc-encoder/include",
    ],
    defines = ["BX_CONFIG_DEBUG=0"],
    visibility = ["//visibility:public"],
    deps = ["@bx_upstream//:bx"],
)

cc_library(
    name = "bimg_decode",
    srcs = [
        "src/image_decode.cpp",
        "3rdparty/tinyexr/deps/miniz/miniz.c",
    ],
    hdrs = glob([
        "include/**/*.h",
        "src/*.h",
        "3rdparty/tinyexr/deps/miniz/*.h",
        "3rdparty/tinyexr/*.h",
        "3rdparty/lodepng/*.h",
        "3rdparty/lodepng/*.cpp",
        "3rdparty/stb/*.h",
    ]),
    includes = [
        "include",
        "3rdparty",
        "3rdparty/tinyexr/deps/miniz",
    ],
    defines = ["BX_CONFIG_DEBUG=0"],
    visibility = ["//visibility:public"],
    deps = [
        ":bimg",
        "@bx_upstream//:bx",
    ],
)
""",
    commit = "b7130927db997b6c25effe77d46e338084ba653d",
    remote = "https://github.com/bkaradzic/bimg.git",
)

git_repository(
    name = "bgfx_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "bgfx",
    srcs = glob(
        ["src/*.cpp"],
        exclude = ["src/amalgamated.cpp"],
    ),
    hdrs = glob([
        "include/**/*.h",
        "src/*.h",
        "src/**/*.inl",
        "3rdparty/directx-headers/include/**/*.h",
        "3rdparty/khronos/**/*.h",
        "3rdparty/renderdoc/**/*.h",
        "scripts/**/*.natvis",
    ]),
    includes = [
        "include",
        "3rdparty",
        "3rdparty/directx-headers/include",
        "3rdparty/directx-headers/include/directx",
        "3rdparty/khronos",
    ],
    defines = ["BX_CONFIG_DEBUG=0"],
    linkopts = [
        "gdi32.lib",
        "user32.lib",
        "opengl32.lib",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bimg_upstream//:bimg_decode",
        "@bx_upstream//:bx",
    ],
)
""",
    commit = "7b3e1ebf626fc6ecb5ba777173c56dddac9a5726",
    remote = "https://github.com/bkaradzic/bgfx.git",
)

git_repository(
    name = "cgltf_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "cgltf",
    hdrs = ["cgltf.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
    commit = "360db1a95480fe102ae9c69b27c5d101167ff5ba",
    remote = "https://github.com/jkuhlmann/cgltf.git",
)

git_repository(
    name = "glm_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "glm",
    hdrs = glob(["glm/**/*.h", "glm/**/*.hpp", "glm/**/*.inl"]),
    includes = ["."],
    visibility = ["//visibility:public"],
)
""",
    commit = "0af55ccecd98d4e5a8d1fad7de25ba429d60e863",
    remote = "https://github.com/g-truc/glm.git",
)

git_repository(
    name = "nlohmann_json_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "nlohmann_json",
    hdrs = glob(["include/**/*.hpp"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
    # TODO(orion): Switch back to the next official nlohmann/json release once
    # it includes the std::optional deserialization fix from PR #4742.
    commit = "f534f4f75e12893716ea688679aeb768bff426c4",
    remote = "https://github.com/nlohmann/json.git",
)

git_repository(
    name = "saba_upstream",
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "pmx_parser",
    srcs = [
        "src/Saba/Base/File.cpp",
        "src/Saba/Base/UnicodeUtil.cpp",
        "src/Saba/Model/MMD/PMXFile.cpp",
    ],
    hdrs = [
        "src/Saba/Base/File.h",
        "src/Saba/Base/Log.h",
        "src/Saba/Base/UnicodeUtil.h",
        "src/Saba/Model/MMD/MMDFileString.h",
        "src/Saba/Model/MMD/PMXFile.h",
        "src/Saba/Model/MMD/SjisToUnicode.h",
    ],
    includes = ["src"],
    visibility = ["//visibility:public"],
    deps = ["@glm_upstream//:glm"],
)
""",
    commit = "29b8efa8b31c8e746f9a88020fb0ad9dcdcf3332",
    patch_args = ["-p1"],
    patches = ["//third_party/saba:disable_log_header.patch"],
    remote = "https://github.com/benikabocha/saba.git",
)
